// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders pdf viewer 1`] = `
<RCTScrollView
  ItemSeparatorComponent={[Function]}
  data={[]}
  getItem={[Function]}
  getItemCount={[Function]}
  getItemLayout={[Function]}
  initialNumToRender={1}
  keyExtractor={[Function]}
  maxToRenderPerBatch={2}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={0.0001}
  stickyHeaderIndices={[]}
  testID="pdfFlatList"
  viewabilityConfigCallbackPairs={[]}
  windowSize={5}
>
  <View />
</RCTScrollView>
`;

exports[`viewer renders pages 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
      },
      {
        "maxHeight": undefined,
      },
    ]
  }
>
  <View>
    <PdfView
      onPdfError={[Function]}
      onPdfLoadComplete={[Function]}
      page={0}
      source="test.pdf"
      style={
        {
          "backgroundColor": "#fff",
          "elevation": 4,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.23,
          "shadowRadius": 2.62,
        }
      }
    />
  </View>
</View>
`;

exports[`viewer renders pages URI source 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
      },
      {
        "maxHeight": undefined,
      },
    ]
  }
>
  <View>
    <PdfView
      onPdfError={[Function]}
      onPdfLoadComplete={[Function]}
      page={0}
      source="/path/to/test.pdf"
      style={
        {
          "backgroundColor": "#fff",
          "elevation": 4,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.23,
          "shadowRadius": 2.62,
        }
      }
    />
  </View>
</View>
`;
